--- a/src/scss/_components/points/_benefits.scss
+++ b/src/scss/_components/points/_benefits.scss
@@ -94,6 +94,15 @@
       margin-bottom: 13px;
       border-radius: 100%;
       background-color: #4a4a4a;
+
+      p {
+        font-size: 38px;
+        font-weight: bold;
+        line-height: 0.63;
+        letter-spacing: -0.7px;
+        text-align: center;
+        color: #ffffff;
+      }
     }
 
     &-desc {
