--- a/src/scss/_components/points/_main.scss
+++ b/src/scss/_components/points/_main.scss
@@ -15,6 +15,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    @include adaptive(767) {
+      display: none;
+    }
 
     &-left,
     &-right {
@@ -40,36 +43,48 @@
     position: relative;
     width: 100%;
     max-width: 616px;
+    @include adaptive(1199) {
+      max-width: 50%;
+    }
+    @include adaptive(767) {
+      max-width: 100%;
+    }
   }
 
   &__badge {
     padding-bottom: 95px;
-    font-size: 24px;
     font-weight: 300;
     line-height: 1.33;
     letter-spacing: -0.5px;
     color: #000000;
+    @include fluid(font-size, 320px, 1440px, 20px, 24px);
+    @include adaptive(1199) {
+      padding-bottom: 75px;
+    }
+    @include adaptive(767) {
+      padding-bottom: 55px;
+    }
   }
 
   &__title {
     padding-bottom: 18px;
-    font-size: 56px;
     font-weight: 900;
     line-height: 1.14;
     letter-spacing: -1.2px;
     color: #000000;
+    @include fluid(font-size, 320px, 1440px, 40px, 56px);
   }
 
   &__text {
     width: 100%;
     max-width: 580px;
-    font-size: 24px;
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
     line-height: 1.35;
     letter-spacing: -0.5px;
     color: #000000;
+    @include fluid(font-size, 320px, 1440px, 20px, 24px);
   }
 }
 
